--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap"
       rel="stylesheet"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Ophir Leibovitch - Composer</title>
   </head>
   <body
     style="
@@ -30,9 +30,8 @@
   >
     <noscript>
       <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.</strong
+        >We're sorry but Ophir Leibovitch - Composer doesn't work properly
+        without JavaScript enabled. Please enable it to continue.</strong
       >
     </noscript>
     <div id="app"></div>
